Added custom validations via annotations